--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,5 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "@supabase-url",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@supabase-anon-key",
-    "HA_BASE_URL": "@ha-base-url",
-    "HA_TOKEN": "@ha-token"
-  }
+  "regions": ["iad1"]
 }
